--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
   text-align: center;
   border-radius: 5px;
   padding: 50px 35px 10px 35px;
+  zoom: 2;
 }
 .container header{
   font-size: 35px;
