--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
   text-align: center;
   border-radius: 5px;
   padding: 50px 35px 10px 35px;
-  min-zoom: 2x;
+  zoom: 2x;
 }
 .container header{
   font-size: 35px;
